✨ Add Counter_16TC Module

--- a/main.ucf
+++ b/main.ucf
@@ -18,3 +18,5 @@ NET "COM[0]" LOC = P30;
 NET "COM[1]" LOC = P33;
 NET "COM[2]" LOC = P43;
 NET "COM[3]" LOC = P44;
+
+NET "ESP_CLK_P23" CLOCK_DEDICATED_ROUTE = FALSE;
